--- a/app/assets/scss/components/miscellaneous/index.scss
+++ b/app/assets/scss/components/miscellaneous/index.scss
@@ -104,6 +104,13 @@
   }
 }
 
+.wp-block-image {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
 .wp-block-image.size-full {
   img {
     width: 100%;
